# tauri-updater-server

./: Cargo.toml
src/: main.rs  settings.rs
src/models/: mod.rs  release.rs
